hildon-fm (0.24-1) unstable; urgency=low

  * UNRELEASED
  * Now showing correct icon while generating thumbnail for images (N#29799).
    (This introduced libossomime dependency.)
  * Added hildon_file_chooser_dialog_focus_to_input for special selection
    needs (N#28539).
  * Fixed unparenting problem in file selection finalisation (N#28074).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 17 May 2006 15:56:48 +0300

hildon-fm (0.23-1) unstable; urgency=low

  * Corrected sfil_ni_operation_failed to sfil_ib_create_folder_not_allowed
    (N#29064).
  * Some white space & indentation fixes.
  * Fixed small UI glitch ('(no notes)') (N#22670).
  * Removed slight API change in the node type enum, fixes N#29391 and
    N#29388.
  * Now using correct logical ids when two memory cards are present (N#29546).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 15 May 2006 16:20:04 +0300

hildon-fm (0.22-1) unstable; urgency=low

  * Made rendering optimisation allowed by fixed bug 22807.
  * Fixed domain for file_ib_name_too_long.
  * Added support for another memory card.
  * Some white space fixes here and there.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 06 May 2006 22:19:12 +0300

hildon-fm (0.21-1) unstable; urgency=low

  * Backported hildon_file_system_info_async_new() and
    hildon_file_system_info_async_cancel() to enable easier moving to
    the new asyncronous API.
  * Added two unit tests for the asyncronous API.
  * hildon-fm-dev is for all architecture (N#27025).
  * hildon-fm-test is for all architecture (N#27026).
  * Lintian fixes.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 26 Apr 2006 15:13:55 +0300

hildon-fm (0.20-1) unstable; urgency=low

  * Packaging fixes to appease Lintian.
  * Added thumb instruction support (N#26673).
  * Added movable separator (GtkHPaned) to file selection (N#24207).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 22 Apr 2006 17:51:31 +0300
